# pydantic-ui

./: .gitignore  LICENSE  PROJECT_PLAN.md  README.md  TESTING_PLAN.md  package-lock.json  pyproject.toml  requirements.txt  test_class_config_union.py
.github/: copilot-instructions.md
.github/workflows/: e2e-tests.yml  publish.yml  test.yml
docs/: DETAILED_PACKAGE_REVIEW.md  MIGRATION_GUIDE.md  TESTING_E2E.md
examples/: callbacks.py  class_config.py  conditional_fields.py  demo.py  dynamic_options.py  e2e_test_app.py  main.py  nested_conditional.py  renderers_demo.py  simple.py  testing.py  unions.py
examples/basic/: callbacks.py  class_config.py  conditional_fields.py  dynamic_options.py  file_transfer.py  main.py  renderers_demo.py  simple.py  testtecton.py  unions.py
examples/nested/: __init__.py  models.py
frontend/: check-playwright.ps1  index.html  package-lock.json  package.json  playwright.config.ts  setup-playwright.ps1  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/context/: ClipboardContext.tsx  DataContext.tsx  EventContext.tsx  ThemeContext.tsx
frontend/src/lib/: displayUtils.ts  tableUtils.ts  tableUtils.tsx  utils.ts
frontend/tests/: setup.ts
frontend/tests/components/: FieldHelp.test.tsx  OrphanedErrors.test.tsx  TreePanel.test.tsx  ui.card.test.tsx
frontend/tests/context/: ClipboardContext.test.tsx  DataContext.test.tsx  EventContext.test.tsx
frontend/tests/mocks/: data.ts  handlers.ts  (+1 more)
plans/: callback.md
pydantic_ui/: __init__.py  app.py  config.py  controller.py  events.py  handlers.py  models.py  schema.py  sessions.py  utils.py
pydantic_ui/static/: .gitkeep
scripts/: build.ps1  built-test.ps1  copy-to-package.js  setup_playwright.ps1  setup_playwright.py  test-app.ps1
tests/: __init__.py  conftest.py
tests/e2e/: README.md  __init__.py  conftest.py  helpers.py  test_app.py  test_data_operations.py  test_deep_grid_view.py  test_discriminated_union_cards.py  test_display_overrides.py  test_duplicate.py  test_field_renderers.py  test_multi_select.py  test_regular_view_duplicate.py  test_table_horizontal_scroll.py  test_table_view.py  test_tree_copy_paste.py  test_tree_navigation.py  test_ui_config.py  test_union_annotated_labels.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_action_handlers.py  test_api_config.py  test_api_data.py  test_api_schema.py  test_api_validation.py  test_class_config.py  test_router_factory.py  test_sse_events.py  test_union_display_config.py
tests/unit/: __init__.py  test_class_config.py  test_config.py  test_controller.py  test_display_config.py  test_dynamic_options.py  test_events.py  test_schema.py  test_sessions.py  test_unions.py  test_utils.py
(+56 files in other folders)
